main/bin/main.19156.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:1:
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/models.h:15:8: error: must use 'struct' tag to refer to type 'Cell'
extern Cell **CellLookup;
       ^
       struct 
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/models.h:15:15: error: extern variable must reside in constant address space
extern Cell **CellLookup;
              ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:4:49: error: kernel parameter cannot be declared as a pointer to a pointer
__kernel void infect_sweep(global struct Cell **CellLookup)
                                                ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
